kubernetes/samples/ingress-nginx/ingress-nginx-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.proxmox.home
    http:
      paths:
      - path: /grafana
        pathType: Exact
        backend:
          service:
            name: grafana
            port:
              number: 31204
  ingressClassName: nginx
