kubernetes/samples/ingress-nginx/ingress-nginx-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-website-simple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.proxmox.home
    http:
      paths:
      - path: /simple
        pathType: Exact
        backend:
          service:
            name: website-simple-service
            port:
              number: 80
  ingressClassName: nginx
