kubernetes/samples/ingress-nginx/ingress-nginx-whoami.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-whoami
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: new.server.local # test.proxmox.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-svc
            port:
              number: 80
  ingressClassName: nginx
